--- a/.github/workflows/cibuild.yml
+++ b/.github/workflows/cibuild.yml
@@ -9,8 +9,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+       configuration: release
+       
 
     steps:
+    - name: Build
+      run: dotnet build --no-restore  --configuration ${{ env.configuration }}
+    - name: Test
+      run: dotnet test --no-build --verbosity normal --configuration ${{ env.configuration }}
 # checkout all sources from git
     - name: Checkout Sources
       uses: actions/checkout@v4
@@ -28,5 +35,9 @@ jobs:
     # run tests
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      
+
+
+      
 
     
